--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "material-ui": "^0.14.4",
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
-    "react-tap-event-plugin": "^0.2.2"
+    "react-tap-event-plugin": "^0.2.2",
+    "underscore": "^1.8.3"
   }
 }
