--- a/package.json
+++ b/package.json
@@ -1,4 +1,4 @@
- {
+{
   "name": "nedkoyring",
   "version": "1.0.0",
   "description": "",
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "cesium": "^1.18.0",
+    "elasticsearch": "^10.1.3",
     "material-ui": "^0.14.4",
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
