--- a/package.json
+++ b/package.json
@@ -9,12 +9,22 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "babel-preset-react": "^6.5.0",
     "cesium": "^1.18.0",
     "elasticsearch": "^10.1.3",
+    "leaflet": "^0.7.7",
     "material-ui": "^0.14.4",
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
+    "react-leaflet": "^0.10.2",
     "react-tap-event-plugin": "^0.2.2",
     "underscore": "^1.8.3"
+  },
+  "devDependencies": {
+    "babel-core": "^6.4.5",
+    "babel-loader": "^6.2.1",
+    "babel-preset-es2015": "^6.3.13",
+    "babel-preset-react": "^6.3.13",
+    "webpack": "^1.12.12"
   }
 }
