--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "elasticsearch": "^10.1.3",
     "leaflet": "^0.7.7",
     "material-ui": "^0.14.4",
+    "openlayers": "^3.14.2",
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
     "react-leaflet": "^0.10.2",
