--- a/package.json
+++ b/package.json
@@ -1,43 +1,25 @@
 {
-  "name": "nedkoyring",
+  "name": "toptour",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/kjartab/toptour.git"
+  },
   "author": "",
   "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/kjartab/toptour/issues"
+  },
+  "homepage": "https://github.com/kjartab/toptour",
   "dependencies": {
-    "babel-preset-react": "^6.5.0",
-    "cesium": "^1.18.0",
-    "elasticsearch": "^10.1.3",
+    "cesium": "^1.19.0",
+    "jquery": "^2.2.2",
     "leaflet": "^0.7.7",
-    "material-ui": "^0.14.4",
-    "openlayers": "^3.14.2",
-    "react": "^0.14.7",
-    "react-dom": "^0.14.7",
-    "react-leaflet": "^0.10.2",
-    "react-tap-event-plugin": "^0.2.2",
     "underscore": "^1.8.3"
-  },
-  "devDependencies": {
-    "babel-core": "^6.4.5",
-    "babel-loader": "^6.2.1",
-    "babel-preset-es2015": "^6.3.13",
-    "babel-preset-react": "^6.3.13",
-    "webpack": "^1.12.12"
-  },
-  "jspm": {
-    "dependencies": {
-      "cesium": "npm:cesium@^1.19.0",
-      "jquery": "npm:jquery@^2.2.2",
-      "underscore": "npm:underscore@^1.8.3"
-    },
-    "devDependencies": {
-      "babel": "npm:babel-core@^5.8.24",
-      "babel-runtime": "npm:babel-runtime@^5.8.24",
-      "core-js": "npm:core-js@^1.1.4"
-    }
   }
 }
