--- a/package.json
+++ b/package.json
@@ -17,9 +17,22 @@
   },
   "homepage": "https://github.com/kjartab/toptour",
   "dependencies": {
+    "babel": "^6.5.2",
+    "babel-core": "^6.7.4",
+    "babel-loader": "^6.2.4",
+    "babel-preset-es2015": "^6.6.0",
+    "babel-preset-react": "^6.5.0",
+    "bootstrap": "^3.3.6",
     "cesium": "^1.19.0",
+    "css-loader": "^0.23.1",
+    "file-loader": "^0.8.5",
     "jquery": "^2.2.2",
     "leaflet": "^0.7.7",
-    "underscore": "^1.8.3"
+    "react": "^0.14.8",
+    "react-dom": "^0.14.8",
+    "style-loader": "^0.13.1",
+    "underscore": "^1.8.3",
+    "url-loader": "^0.5.7",
+    "webpack": "^1.12.14"
   }
 }
