--- a/package.json
+++ b/package.json
@@ -25,9 +25,10 @@
     "bootstrap": "^3.3.6",
     "cesium": "^1.19.0",
     "css-loader": "^0.23.1",
-    "es": "^0.5.1",
+    "elasticsearch": "^11.0.1",
     "file-loader": "^0.8.5",
     "jquery": "^2.2.2",
+    "kue": "^0.11.1",
     "leaflet": "^0.7.7",
     "pg": "^4.5.6",
     "react": "^0.14.8",
